styles.css
body {
	font-family: sans-serif;
}

h3 {
	margin: 12px 0px 4px 0px;
}

button {
	margin-top: 4px;
	padding: 4px 8px;
	font-size: 14px;
	cursor: pointer;
	background: lightgrey;
	border: 2px outset lightgrey;
}

button:hover,
button:focus {
	background: lightblue;
	border: 2px outset lightblue;
}

button:active {
	background: lightblue;
	border: 2px inset lightblue;
}

/* programme page */
#media-list,
#selected-media {
	list-style-type: none;
	overflow-x: auto;
	overflow-y: hidden;
	white-space: nowrap;
	margin: 0px;
	padding: 4px;
	height: 80px;
	border: solid 1px black;
}

.media-item {
	display: inline-block;
	position: relative;
	width: 128px;
	height: 72px;
	text-align: center;
	padding: 4px;
}

.media-item img {
	display: inline-block;
	width: 128px;
	height: 72px;
	background: black;
	object-fit: scale-down;
}

.media-item button {
	display: none;
	position: absolute;
	top: 4px;
	right: 6px;
	margin: 0px;
	padding: 4px;
	background: transparent;
	border: none;
	cursor: pointer;
	color: white;
	text-shadow: 0 0 3px black;
	font-size: 10px;
	font-weight: bold;
}

.media-item button:hover {
	color: red;
	text-shadow: 0 0 1px white;
}

.media-item:hover button {
	display: block;
}

.media-item input.duration {
	display: block;
	position: absolute;
	bottom: 4px;
	left: 4px;
	right: 4px;
	width: 128px;
	padding: 6px;
	box-sizing: border-box;

	-moz-appearance: textfield;
	background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4));
	border: none;
	color: white;
	text-align: center;
	text-shadow: 0 0 3px black;
	font-size: 10px;
	font-weight: bold;
	cursor: text;
	transition: 0.2s;
}

.media-item input.duration:hover,
.media-item input.duration:focus {
	outline: none;
	background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8));
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

#drop-location {
	display: inline-block;
	width: 8px;
	height: 72px;
	background-color: blue;
	margin-top: 4px;
	margin-right: 2px;
	margin-left: 2px;
}

#loading {
	display: block;
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	background: rgba(255,255,255,0.9);
	backdrop-filter: blur(4px);
	color: black;
	text-align: center;
	padding-top: 48px;
}

#loading::before {
	display: block;
	content: '';
	width: 48px;
	height: 48px;
	margin: 28px auto;
	border-radius: 50%;
	border-top: solid 6px black;
	border-right: solid 6px black;
	border-bottom: solid 6px transparent;
	border-left: solid 6px transparent;
	animation: spin 0.8s linear infinite;
}

@keyframes spin {
	0% { transform: rotate(0deg); }
	100% { transform: rotate(360deg); }
}

/* calendar page */
.glm-calendar {
	display: inline-block;
	padding: 8px;
}

.glm-calendar .month {
	border: solid lightgrey 1px;
}

.glm-calendar caption {
	padding: 4px;
	text-align: center;
	border: solid lightgrey 1px;
}

.glm-calendar .month .daynames td {
	border-bottom: solid lightgrey 1px;
}

.glm-calendar .month td {
	padding: 4px;
	width: 36px;
	text-align: center;
	border: solid 1px transparent;
}

.glm-calendar .month .week .day {
	cursor: pointer;
}

.glm-calendar .month .week .day.custom {
	background: lightblue !important;
}

.glm-calendar .month .week .day.default-disabled {
	background: lightcoral !important;
}

.glm-calendar .month .week .day.custom.default-disabled {
	background: cyan !important;
}

.glm-calendar .month .week .day:hover {
	background: lightgrey;
	border-color: grey;
}

.prog-tooltip {
	display: block;
	position: fixed;
	background: lightblue;
	padding: 4px;
	height: 71px;
	box-shadow: 0 0 4px grey;
	border: solid 1px grey;
	pointer-events: none;
}

.prog-tooltip::before {
	content: '';
	position: absolute;
	display: block;
	width: 0px;
	left: 17px;
	bottom: 0;
	border: 7px solid transparent;
	border-bottom: 0;
	border-top: 7px solid grey;
	transform: translate(14px, 100%);
}

.prog-tooltip small {
	display: block;
	font-family: sans-serif;
	font-size: 12px;
	line-height: 15px;
	height: 15px;
	margin-bottom: 2px;
}

.prog-tooltip img {
	display: inline-block;
	width: 96px;
	height: 54px;
	background: black;
	object-fit: contain;
	margin-right: 4px;
}

.prog-tooltip img:last-child {
	margin-right: 0px;
}

